--- a/ecoleinfographie/composer.json
+++ b/ecoleinfographie/composer.json
@@ -9,6 +9,7 @@
         "backpack/base": "^0.7.16",
         "backpack/crud": "^3.1",
         "backpack/langfilemanager": "^1.0",
+        "backpack/pagemanager": "^1.1",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
     },
