--- a/ecoleinfographie/package.json
+++ b/ecoleinfographie/package.json
@@ -10,8 +10,15 @@
     "axios": "^0.15.2",
     "bootstrap-sass": "^3.3.7",
     "jquery": "^3.1.0",
+    "laravel-elixir-browsersync-official": "^1.0.0",
+    "laravel-elixir-stylus": "^2.0.3",
     "laravel-mix": "^0.6.0",
     "lodash": "^4.16.2",
     "vue": "^2.0.1"
+  },
+  "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "laravel-elixir": "^6.0.0-15"
   }
 }
