--- a/ecoleinfographie/package.json
+++ b/ecoleinfographie/package.json
@@ -20,6 +20,7 @@
     "elixir-tinypng": "^1.0.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "laravel-elixir": "^6.0.0-15"
+    "laravel-elixir": "^6.0.0-15",
+    "laravel-elixir-icons": "^2.0.4"
   }
 }
