--- a/ecoleinfographie/package.json
+++ b/ecoleinfographie/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "axios": "^0.15.2",
     "bootstrap-sass": "^3.3.7",
+    "del": "^2.2.2",
     "gulp-plumber": "^1.1.0",
     "jquery": "^3.1.0",
     "laravel-elixir-browsersync-official": "^1.0.0",
