--- a/ecoleinfographie/package.json
+++ b/ecoleinfographie/package.json
@@ -22,7 +22,10 @@
     "elixir-tinypng": "^1.0.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-svgmin": "^1.2.3",
     "laravel-elixir": "^6.0.0-15",
-    "laravel-elixir-icons": "^2.0.4"
+    "laravel-elixir-icons": "^2.0.4",
+    "laravel-elixir-svg-sprite": "^0.1.4",
+    "laravel-elixir-svg-symbols": "^1.0.1"
   }
 }
