--- a/ecoleinfographie/package.json
+++ b/ecoleinfographie/package.json
@@ -22,6 +22,7 @@
     "elixir-tinypng": "^1.0.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean-css": "^3.0.4",
     "laravel-elixir": "^6.0.0-15",
     "laravel-elixir-browserify-official": "^0.1.3"
   }
