--- a/ecoleinfographie/composer.json
+++ b/ecoleinfographie/composer.json
@@ -10,6 +10,7 @@
         "backpack/crud": "^3.2.0",
         "backpack/langfilemanager": "^1.0",
         "backpack/pagemanager": "^1.1",
+        "backpack/settings": "^2.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "spatie/laravel-translatable": "^1.2"
