--- a/ecoleinfographie/composer.json
+++ b/ecoleinfographie/composer.json
@@ -18,9 +18,9 @@
     "require-dev": {
         "backpack/generators": "^1.1",
         "fzaninotto/faker": "~1.4",
+        "laracasts/generators": "dev-master as 1.1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
-        "laracasts/generators": "dev-master as 1.1.4"
+        "phpunit/phpunit": "~5.7"
     },
     "autoload": {
         "classmap": [
