--- a/ecoleinfographie/composer.json
+++ b/ecoleinfographie/composer.json
@@ -11,6 +11,7 @@
         "backpack/langfilemanager": "^1.0",
         "backpack/pagemanager": "^1.1",
         "backpack/settings": "^2.0",
+        "barryvdh/laravel-debugbar": "^2.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "spatie/laravel-translatable": "^1.2"
