--- a/ecoleinfographie/composer.json
+++ b/ecoleinfographie/composer.json
@@ -10,6 +10,7 @@
         "backpack/crud": "^3.2.0",
         "backpack/langfilemanager": "^1.0",
         "backpack/pagemanager": "^1.1",
+        "backpack/permissionmanager": "^2.1",
         "backpack/settings": "^2.0",
         "barryvdh/laravel-debugbar": "^2.3",
         "laravel/framework": "5.4.*",
