--- a/ecoleinfographie/composer.json
+++ b/ecoleinfographie/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "artesaos/seotools": "^0.10.0",
         "backpack/base": "^0.7.16",
         "backpack/crud": "^3.2.0",
         "backpack/langfilemanager": "^1.0",
