--- a/ecoleinfographie/composer.json
+++ b/ecoleinfographie/composer.json
@@ -14,6 +14,7 @@
         "backpack/permissionmanager": "^2.1",
         "backpack/settings": "^2.0",
         "barryvdh/laravel-debugbar": "^2.3",
+        "intervention/image": "^2.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "spatie/laravel-translatable": "^1.2"
