--- a/ecoleinfographie/composer.json
+++ b/ecoleinfographie/composer.json
@@ -15,8 +15,10 @@
         "backpack/settings": "^2.0",
         "barryvdh/laravel-debugbar": "^2.3",
         "intervention/image": "^2.3",
+        "jeremeamia/superclosure": "^2.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "rtconner/laravel-likeable": "~1.2",
         "spatie/laravel-translatable": "^1.2"
     },
     "require-dev": {
