--- a/ecoleinfographie/composer.json
+++ b/ecoleinfographie/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "rtconner/laravel-likeable": "~1.2",
+        "spatie/laravel-analytics": "^3.0",
         "spatie/laravel-translatable": "^1.2"
     },
     "require-dev": {
